update solver print info

--- a/SparseWeights_CVXOPT-test - cheburashka - WITH - spatial_term.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka - WITH - spatial_term.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,22 +16,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# exampleName=\"cheburashka\"\n",
-    "# poses_folder=\"poses-2\"\n",
-    "# poses_ind=7\n",
-    "# clip_k=4\n",
-    "# handle_num=11\n",
-    "\n",
-    "\n",
-    "exampleName=\"cow\"\n",
+    "exampleName=\"cheburashka\"\n",
     "poses_folder=\"poses-2\"\n",
-    "poses_ind=5\n",
+    "poses_ind=7\n",
     "clip_k=4\n",
-    "handle_num=15\n",
+    "handle_num=11\n",
+    "\n",
+    "\n",
+    "# exampleName=\"cow\"\n",
+    "# poses_folder=\"poses-2\"\n",
+    "# poses_ind=5\n",
+    "# clip_k=4\n",
+    "# handle_num=15\n",
     "\n",
     "\n",
     "# exampleName=\"wolf\"\n",
@@ -42,24 +42,14 @@
     "\n",
     "\n",
     "\n",
-    "weights = {'W_spatial': 0.0}"
+    "weights = {'W_spatial': 1.0}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['./models/cow-all/poses-2/cow-1.obj', './models/cow-all/poses-2/cow-2.obj', './models/cow-all/poses-2/cow-3.obj', './models/cow-all/poses-2/cow-4.obj', './models/cow-all/poses-2/cow-5.obj', './models/cow-all/poses-2/cow-6.obj', './models/cow-all/poses-2/cow-7.obj']\n",
-      "(11666, 28)\n",
-      "(11666, 21)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### read obj file\n",
     "\n",
@@ -88,37 +78,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(15, 84)\n",
-      "(11666, 15)\n",
-      "[[0.20570602 0.00042219 0.02655054 0.15167153 0.00018981 0.00004767\n",
-      "  0.00030539 0.00002423 0.02001831 0.00000105 0.00102998 0.14445015\n",
-      "  0.00045419 0.44910447 0.00002447]\n",
-      " [0.21555833 0.0004373  0.02679411 0.16466939 0.00016431 0.00004939\n",
-      "  0.00029969 0.00002367 0.01424946 0.00000119 0.00101018 0.15187666\n",
-      "  0.00048589 0.42435294 0.00002749]\n",
-      " [0.24024097 0.00040106 0.02997077 0.15734726 0.00013956 0.00004676\n",
-      "  0.00030475 0.00002278 0.01438586 0.00000122 0.00103343 0.11445163\n",
-      "  0.00051674 0.44110425 0.00003297]]\n",
-      "[[0.20570602 0.         0.         0.15167153 0.         0.\n",
-      "  0.         0.         0.         0.         0.         0.14445015\n",
-      "  0.         0.44910447 0.        ]\n",
-      " [0.21555833 0.         0.         0.16466939 0.         0.\n",
-      "  0.         0.         0.         0.         0.         0.15187666\n",
-      "  0.         0.42435294 0.        ]\n",
-      " [0.24024097 0.         0.         0.15734726 0.         0.\n",
-      "  0.         0.         0.         0.         0.         0.11445163\n",
-      "  0.         0.44110425 0.        ]]\n",
-      "0.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#### read our output of simplex_hull.py \n",
     "results_path=\"./results_pipeline/\"+exampleName+\"-\"+str(handle_num)+\"/result.txt\"\n",
@@ -145,17 +107,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "708.6870049193496\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "scale=find_scale(vertices1)\n",
     "print (scale)"
@@ -163,17 +117,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.07533573276941448\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recovered_vertices2=recover_vertices(mixing_weights, vertices1, endmembers)\n",
     "print (E_RMS_kavan2010(vertices2, recovered_vertices2, scale))"
@@ -183,65 +129,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "37144.77739542565\n",
-      "(174990, 1)\n",
-      "(11666, 28)\n",
-      "(11666, 21)\n",
-      "11666 7 15\n",
-      "W_spatial 0.0\n",
-      "     pcost       dcost       gap    pres   dres\n",
-      " 0: -1.0742e+08 -1.0873e+08  4e+07  2e+01  2e-13\n",
-      " 1: -1.0708e+08 -1.0846e+08  2e+07  6e+00  2e-13\n",
-      " 2: -1.0642e+08 -1.0780e+08  1e+07  3e+00  1e-13\n",
-      " 3: -1.0600e+08 -1.0758e+08  8e+06  1e+00  1e-13\n",
-      " 4: -1.0572e+08 -1.0724e+08  6e+06  8e-01  1e-13\n",
-      " 5: -1.0571e+08 -1.0724e+08  6e+06  8e-01  1e-13\n",
-      " 6: -1.0550e+08 -1.0673e+08  4e+06  4e-01  1e-13\n",
-      " 7: -1.0542e+08 -1.0646e+08  3e+06  3e-01  1e-13\n",
-      " 8: -1.0530e+08 -1.0614e+08  2e+06  2e-01  1e-13\n",
-      " 9: -1.0527e+08 -1.0595e+08  2e+06  2e-01  1e-13\n",
-      "10: -1.0525e+08 -1.0579e+08  2e+06  1e-01  1e-13\n",
-      "11: -1.0519e+08 -1.0555e+08  2e+06  1e-01  1e-13\n",
-      "12: -1.0511e+08 -1.0524e+08  2e+06  1e-01  1e-13\n",
-      "13: -1.0503e+08 -1.0497e+08  2e+06  1e-01  1e-13\n",
-      "14: -1.0485e+08 -1.0459e+08  2e+06  9e-02  1e-13\n",
-      "15: -1.0457e+08 -1.0418e+08  2e+06  7e-02  1e-13\n",
-      "16: -1.0421e+08 -1.0388e+08  2e+06  5e-02  1e-13\n",
-      "17: -1.0384e+08 -1.0366e+08  2e+06  4e-02  1e-13\n",
-      "18: -1.0348e+08 -1.0349e+08  2e+06  3e-02  1e-13\n",
-      "19: -1.0348e+08 -1.0346e+08  2e+06  3e-02  1e-13\n",
-      "20: -1.0344e+08 -1.0334e+08  2e+06  3e-02  1e-13\n",
-      "21: -1.0335e+08 -1.0298e+08  2e+06  3e-02  1e-13\n",
-      "22: -1.0323e+08 -1.0270e+08  2e+06  2e-02  1e-13\n",
-      "23: -1.0306e+08 -1.0240e+08  2e+06  2e-02  1e-13\n",
-      "24: -1.0286e+08 -1.0213e+08  2e+06  2e-02  1e-13\n",
-      "25: -1.0264e+08 -1.0185e+08  2e+06  2e-02  1e-13\n",
-      "26: -1.0258e+08 -1.0177e+08  2e+06  2e-02  1e-13\n",
-      "27: -1.0250e+08 -1.0165e+08  2e+06  2e-02  1e-13\n",
-      "28: -1.0241e+08 -1.0145e+08  2e+06  1e-02  1e-13\n",
-      "29: -1.0229e+08 -1.0118e+08  2e+06  1e-02  1e-13\n",
-      "30: -1.0214e+08 -1.0083e+08  2e+06  1e-02  1e-13\n",
-      "31: -1.0197e+08 -1.0038e+08  2e+06  1e-02  1e-13\n",
-      "32: -1.0173e+08 -9.9721e+07  2e+06  1e-02  1e-13\n",
-      "33: -1.0140e+08 -9.8832e+07  2e+06  1e-02  1e-13\n",
-      "34: -1.0100e+08 -9.7977e+07  3e+06  9e-03  1e-13\n",
-      "35: -1.0067e+08 -9.7462e+07  3e+06  8e-03  1e-13\n",
-      "36: -1.0035e+08 -9.7036e+07  3e+06  8e-03  1e-13\n",
-      "37: -9.9783e+07 -9.6425e+07  3e+06  7e-03  1e-13\n",
-      "38: -9.9486e+07 -9.6155e+07  3e+06  6e-03  1e-13\n",
-      "39: -9.8767e+07 -9.5525e+07  3e+06  5e-03  9e-14\n",
-      "40: -9.8329e+07 -9.5192e+07  3e+06  5e-03  8e-14\n",
-      "41: -9.7945e+07 -9.4870e+07  3e+06  4e-03  8e-14\n",
-      "42: -9.7648e+07 -9.4630e+07  3e+06  4e-03  8e-14\n",
-      "43: -9.7420e+07 -9.4441e+07  3e+06  4e-03  8e-14\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "recovered_vertices2=recover_vertices(mixing_weights_clip, vertices1, endmembers)\n",
     "print (E_RMS_kavan2010(vertices2, recovered_vertices2, scale))\n",
