--- a/SparseWeights_CVXOPT-test - cheburashka.ipynb
+++ b/SparseWeights_CVXOPT-test - cheburashka.ipynb
@@ -466,15 +466,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n"
+      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:12: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  if sys.path[0] == '':\n"
      ]
     },
     {
@@ -489,12 +489,20 @@
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "eps=1e-10\n",
     "\n",
-    "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]\n",
-    "recovered_handle_position=mixing_weights.T.dot(Vertices)/mixing_weights.T.sum(axis=-1)[...,np.newaxis]\n",
-    "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/res.T.sum(axis=-1)[...,np.newaxis]\n",
+    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "## use recovered vertices instead.\n",
+    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "\n",
+    "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "\n",
     "\n",
     "%matplotlib \n",
     "import matplotlib.pyplot as plt\n",
