--- a/SparseWeights_CVXOPT-test - wolf.ipynb
+++ b/SparseWeights_CVXOPT-test - wolf.ipynb
@@ -121,9 +121,6 @@
       "  0.         0.17335098 0.         0.         0.         0.12530878\n",
       "  0.         0.         0.         0.         0.         0.\n",
       "  0.         0.         0.27936539]]\n",
-      "[13 19 14 18 15  4  1  9  3 17  2 10 16  8  5  6 12 34 40 35 39 36 25 22\n",
-      " 30 24 38 23 31 37 29 26 27 33 55 61 56 60 57 46 43 51 45 59 44 52 58 50\n",
-      " 47 48 54 76 82 77 81 78 67 64 72 66 80 65 73]\n",
       "0.0\n"
      ]
     }
@@ -149,10 +146,7 @@
     "print (mixing_weights[:3])\n",
     "mixing_weights_clip, grad_zero_indices=clip_first_k_values(mixing_weights, clip_k)\n",
     "print (mixing_weights_clip[:3])\n",
-    "\n",
-    "print (grad_zero_indices[:len(endmembers)*3])\n",
-    "\n",
-    "print (mixing_weights_clip.ravel()[grad_zero_indices].sum())"
+    "print ((col_major(mixing_weights_clip)[grad_zero_indices]).sum()) ### should be zero"
    ]
   },
   {
@@ -207,111 +201,111 @@
       "5075 6 21\n",
       "W_spatial 0.0\n",
       "     pcost       dcost       gap    pres   dres\n",
-      " 0: -6.7439e+05 -9.9455e+05  3e+06  4e+00  3e-14\n",
-      " 1: -6.7398e+05 -9.6379e+05  2e+06  3e+00  3e-14\n",
-      " 2: -6.5363e+05 -8.9195e+05  2e+06  2e+00  3e-14\n",
-      " 3: -6.1482e+05 -7.3799e+05  1e+06  1e+00  2e-14\n",
-      " 4: -5.6338e+05 -5.7968e+05  1e+06  1e+00  2e-14\n",
-      " 5: -5.3459e+05 -3.4072e+05  1e+06  1e+00  2e-14\n",
-      " 6: -4.6803e+05  8.2022e+04  1e+06  9e-01  2e-14\n",
-      " 7: -4.4614e+05  5.0460e+05  1e+06  9e-01  2e-14\n",
-      " 8: -3.7439e+05  1.3931e+06  2e+06  9e-01  2e-14\n",
-      " 9: -3.1624e+05  2.0354e+06  2e+06  8e-01  2e-14\n",
-      "10: -2.0422e+05  3.2452e+06  2e+06  8e-01  2e-14\n",
-      "11: -8.2764e+04  4.4966e+06  2e+06  8e-01  3e-14\n",
-      "12:  3.9970e+05  7.3843e+06  3e+06  7e-01  3e-14\n",
-      "13:  5.5246e+05  8.3237e+06  3e+06  7e-01  3e-14\n",
-      "14:  1.2675e+06  1.2016e+07  4e+06  7e-01  3e-14\n",
-      "15:  1.6209e+06  1.4000e+07  4e+06  7e-01  3e-14\n",
-      "16:  2.7594e+06  1.8347e+07  6e+06  6e-01  3e-14\n",
-      "17:  3.0113e+06  1.9276e+07  6e+06  6e-01  3e-14\n",
-      "18:  4.1927e+06  2.3049e+07  7e+06  6e-01  3e-14\n",
-      "19:  4.4032e+06  2.5143e+07  7e+06  6e-01  3e-14\n",
-      "20:  5.5936e+06  3.1263e+07  9e+06  5e-01  4e-14\n",
-      "21:  6.0405e+06  3.3746e+07  9e+06  5e-01  4e-14\n",
-      "22:  7.1740e+06  3.9502e+07  1e+07  5e-01  4e-14\n",
-      "23:  8.8599e+06  4.9446e+07  1e+07  5e-01  5e-14\n",
-      "24:  8.9859e+06  5.0527e+07  1e+07  5e-01  5e-14\n",
-      "25:  1.0197e+07  5.9090e+07  2e+07  5e-01  5e-14\n",
-      "26:  1.1830e+07  7.0883e+07  2e+07  4e-01  5e-14\n",
-      "27:  1.3571e+07  8.2347e+07  2e+07  4e-01  6e-14\n",
-      "28:  1.6138e+07  9.4620e+07  2e+07  4e-01  6e-14\n",
-      "29:  1.9005e+07  1.1007e+08  3e+07  4e-01  7e-14\n",
-      "30:  2.4243e+07  1.3366e+08  4e+07  4e-01  7e-14\n",
-      "31:  3.0248e+07  1.5583e+08  4e+07  4e-01  8e-14\n",
-      "32:  3.5785e+07  1.7678e+08  5e+07  4e-01  9e-14\n",
-      "33:  4.3042e+07  2.1134e+08  6e+07  3e-01  1e-13\n",
-      "34:  4.6337e+07  2.4643e+08  7e+07  3e-01  1e-13\n",
-      "35:  4.9757e+07  2.8064e+08  7e+07  3e-01  1e-13\n",
-      "36:  5.6946e+07  3.2873e+08  9e+07  3e-01  1e-13\n",
-      "37:  6.3161e+07  3.8591e+08  1e+08  3e-01  1e-13\n",
-      "38:  7.0541e+07  4.6478e+08  1e+08  3e-01  1e-13\n",
-      "39:  7.6495e+07  5.1954e+08  1e+08  3e-01  1e-13\n",
-      "40:  8.7714e+07  6.7197e+08  2e+08  3e-01  1e-13\n",
-      "41:  9.7524e+07  7.6081e+08  2e+08  3e-01  1e-13\n",
-      "42:  1.1767e+08  9.7358e+08  2e+08  3e-01  2e-13\n",
-      "43:  1.1439e+08  1.0250e+09  2e+08  3e-01  2e-13\n",
-      "44:  1.1984e+08  1.1662e+09  3e+08  3e-01  2e-13\n",
-      "45:  1.2619e+08  1.3595e+09  3e+08  3e-01  2e-13\n",
-      "46:  1.4075e+08  1.7270e+09  4e+08  3e-01  2e-13\n",
-      "47:  1.6921e+08  2.3849e+09  5e+08  2e-01  2e-13\n",
-      "48:  1.7194e+08  2.4664e+09  5e+08  2e-01  2e-13\n",
-      "49:  1.9103e+08  2.8814e+09  6e+08  2e-01  2e-13\n",
-      "50:  2.1969e+08  3.6618e+09  8e+08  2e-01  2e-13\n",
-      "51:  2.4876e+08  4.3440e+09  9e+08  2e-01  2e-13\n",
-      "52:  3.1984e+08  5.5829e+09  1e+09  2e-01  2e-13\n",
-      "53:  3.9344e+08  6.7138e+09  1e+09  2e-01  2e-13\n",
-      "54:  5.1730e+08  8.4395e+09  2e+09  2e-01  3e-13\n",
-      "55:  4.6591e+08  1.0127e+10  2e+09  2e-01  3e-13\n",
-      "56:  5.6144e+08  1.1939e+10  2e+09  2e-01  3e-13\n",
-      "57:  7.5777e+08  1.5114e+10  3e+09  2e-01  3e-13\n",
-      "58:  7.8996e+08  1.5824e+10  3e+09  2e-01  3e-13\n",
-      "59:  8.3470e+08  1.6714e+10  3e+09  2e-01  3e-13\n",
-      "60:  9.8082e+08  1.9756e+10  4e+09  2e-01  4e-13\n",
-      "61:  9.8061e+08  2.2394e+10  4e+09  2e-01  4e-13\n",
-      "62:  1.0331e+09  2.6264e+10  5e+09  2e-01  4e-13\n",
-      "63:  1.1157e+09  3.0671e+10  6e+09  2e-01  4e-13\n",
-      "64:  1.2104e+09  3.4806e+10  6e+09  2e-01  4e-13\n",
-      "65:  1.3308e+09  4.0571e+10  7e+09  2e-01  4e-13\n",
-      "66:  1.5012e+09  4.7813e+10  8e+09  2e-01  5e-13\n",
-      "67:  1.5760e+09  5.1483e+10  9e+09  2e-01  5e-13\n",
-      "68:  1.6826e+09  5.5501e+10  1e+10  2e-01  5e-13\n",
-      "69:  1.9157e+09  6.3661e+10  1e+10  2e-01  5e-13\n",
-      "70:  2.3665e+09  7.6546e+10  1e+10  2e-01  5e-13\n",
-      "71:  3.5050e+09  1.0171e+11  2e+10  2e-01  6e-13\n",
-      "72:  4.9026e+09  1.2576e+11  2e+10  2e-01  6e-13\n",
-      "73:  5.1480e+09  1.3275e+11  2e+10  2e-01  6e-13\n",
-      "74:  6.5800e+09  1.5825e+11  3e+10  2e-01  7e-13\n",
-      "75:  7.2612e+09  1.7049e+11  3e+10  2e-01  7e-13\n",
-      "76:  8.3211e+09  1.8847e+11  3e+10  2e-01  8e-13\n",
-      "77:  8.8608e+09  2.1913e+11  4e+10  2e-01  8e-13\n",
-      "78:  1.0612e+10  2.8710e+11  5e+10  2e-01  9e-13\n",
-      "79:  1.0566e+10  2.8998e+11  5e+10  2e-01  9e-13\n",
-      "80:  1.1708e+10  3.8632e+11  6e+10  2e-01  1e-12\n",
-      "81:  1.7053e+10  5.5526e+11  9e+10  2e-01  1e-12\n",
-      "82:  2.4343e+10  7.2354e+11  1e+11  2e-01  2e-12\n",
-      "83:  2.6128e+10  7.6026e+11  1e+11  2e-01  2e-12\n",
-      "84:  2.8877e+10  8.2053e+11  1e+11  2e-01  2e-12\n",
-      "85:  3.2194e+10  9.0396e+11  1e+11  2e-01  2e-12\n",
-      "86:  3.3956e+10  1.0367e+12  2e+11  2e-01  2e-12\n",
-      "87:  4.7395e+10  1.4760e+12  2e+11  2e-01  2e-12\n",
-      "88:  5.3743e+10  1.6397e+12  3e+11  2e-01  3e-12\n",
-      "89:  7.4483e+10  2.0727e+12  3e+11  2e-01  3e-12\n",
-      "90:  1.0504e+11  2.5861e+12  4e+11  2e-01  4e-12\n",
-      "91:  1.4918e+11  3.1947e+12  5e+11  2e-01  4e-12\n",
-      "92:  1.6386e+11  3.4687e+12  6e+11  2e-01  5e-12\n",
-      "93:  1.6798e+11  3.7870e+12  6e+11  2e-01  5e-12\n",
-      "94:  1.8353e+11  4.1243e+12  7e+11  2e-01  5e-12\n",
-      "95:  2.0770e+11  4.5998e+12  8e+11  2e-01  6e-12\n",
-      "96:  2.5132e+11  5.4460e+12  9e+11  2e-01  6e-12\n",
-      "97:  3.1316e+11  6.8381e+12  1e+12  2e-01  6e-12\n",
-      "98:  3.0164e+11  7.2714e+12  1e+12  2e-01  7e-12\n",
-      "99:  3.4097e+11  9.2437e+12  1e+12  2e-01  7e-12\n",
-      "100:  3.9210e+11  1.0928e+13  2e+12  2e-01  7e-12\n",
+      " 0: -2.8654e+06 -3.6498e+06  1e+07  1e+01  1e-15\n",
+      " 1: -2.8627e+06 -3.6870e+06  1e+07  7e+00  1e-15\n",
+      " 2: -2.8612e+06 -3.7371e+06  9e+06  6e+00  1e-15\n",
+      " 3: -2.8541e+06 -3.7391e+06  5e+06  3e+00  1e-15\n",
+      " 4: -2.8531e+06 -3.7637e+06  5e+06  2e+00  1e-15\n",
+      " 5: -2.8509e+06 -3.7559e+06  4e+06  2e+00  1e-15\n",
+      " 6: -2.8400e+06 -3.8370e+06  3e+06  1e+00  1e-15\n",
+      " 7: -2.8349e+06 -3.7721e+06  3e+06  8e-01  1e-15\n",
+      " 8: -2.8297e+06 -3.5831e+06  2e+06  5e-01  1e-15\n",
+      " 9: -2.8244e+06 -3.5625e+06  2e+06  3e-01  1e-15\n",
+      "10: -2.8198e+06 -3.5230e+06  2e+06  2e-01  1e-15\n",
+      "11: -2.8188e+06 -3.5144e+06  1e+06  2e-01  1e-15\n",
+      "12: -2.8163e+06 -3.5108e+06  1e+06  2e-01  1e-15\n",
+      "13: -2.8137e+06 -3.4583e+06  1e+06  2e-01  1e-15\n",
+      "14: -2.8090e+06 -3.4435e+06  1e+06  1e-01  1e-15\n",
+      "15: -2.8054e+06 -3.3530e+06  1e+06  1e-01  1e-15\n",
+      "16: -2.8014e+06 -3.3323e+06  1e+06  8e-02  1e-15\n",
+      "17: -2.7954e+06 -3.1082e+06  6e+05  4e-02  1e-15\n",
+      "18: -2.7932e+06 -3.0855e+06  5e+05  3e-02  1e-15\n",
+      "19: -2.7889e+06 -3.0645e+06  5e+05  3e-02  1e-15\n",
+      "20: -2.7775e+06 -3.0298e+06  5e+05  2e-02  1e-15\n",
+      "21: -2.7696e+06 -2.9921e+06  4e+05  2e-02  1e-15\n",
+      "22: -2.7678e+06 -2.9880e+06  4e+05  2e-02  1e-15\n",
+      "23: -2.7610e+06 -2.9726e+06  4e+05  2e-02  1e-15\n",
+      "24: -2.7525e+06 -2.9255e+06  4e+05  1e-02  1e-15\n",
+      "25: -2.7509e+06 -2.9232e+06  4e+05  1e-02  1e-15\n",
+      "26: -2.7475e+06 -2.9049e+06  3e+05  9e-03  1e-15\n",
+      "27: -2.7431e+06 -2.8854e+06  3e+05  9e-03  1e-15\n",
+      "28: -2.7330e+06 -2.8590e+06  3e+05  7e-03  1e-15\n",
+      "29: -2.7283e+06 -2.8494e+06  3e+05  7e-03  1e-15\n",
+      "30: -2.7183e+06 -2.8274e+06  3e+05  6e-03  1e-15\n",
+      "31: -2.7085e+06 -2.8120e+06  3e+05  5e-03  1e-15\n",
+      "32: -2.6983e+06 -2.7943e+06  3e+05  4e-03  1e-15\n",
+      "33: -2.6923e+06 -2.7847e+06  3e+05  4e-03  1e-15\n",
+      "34: -2.6886e+06 -2.7809e+06  3e+05  3e-03  1e-15\n",
+      "35: -2.6847e+06 -2.7746e+06  3e+05  3e-03  1e-15\n",
+      "36: -2.6811e+06 -2.7719e+06  3e+05  3e-03  1e-15\n",
+      "37: -2.6758e+06 -2.7656e+06  3e+05  3e-03  1e-15\n",
+      "38: -2.6682e+06 -2.7583e+06  3e+05  2e-03  1e-15\n",
+      "39: -2.6637e+06 -2.7515e+06  3e+05  2e-03  1e-15\n",
+      "40: -2.6578e+06 -2.7422e+06  2e+05  2e-03  1e-15\n",
+      "41: -2.6511e+06 -2.7336e+06  2e+05  2e-03  1e-15\n",
+      "42: -2.6445e+06 -2.7270e+06  2e+05  1e-03  1e-15\n",
+      "43: -2.6393e+06 -2.7207e+06  2e+05  1e-03  1e-15\n",
+      "44: -2.6365e+06 -2.7159e+06  2e+05  1e-03  1e-15\n",
+      "45: -2.6337e+06 -2.7137e+06  2e+05  1e-03  1e-15\n",
+      "46: -2.6262e+06 -2.7022e+06  2e+05  1e-03  1e-15\n",
+      "47: -2.6209e+06 -2.6946e+06  2e+05  9e-04  1e-15\n",
+      "48: -2.6184e+06 -2.6911e+06  2e+05  8e-04  1e-15\n",
+      "49: -2.6133e+06 -2.6818e+06  2e+05  7e-04  1e-15\n",
+      "50: -2.6085e+06 -2.6727e+06  2e+05  6e-04  1e-15\n",
+      "51: -2.6020e+06 -2.6620e+06  2e+05  5e-04  1e-15\n",
+      "52: -2.5977e+06 -2.6566e+06  2e+05  5e-04  1e-15\n",
+      "53: -2.5943e+06 -2.6489e+06  2e+05  4e-04  1e-15\n",
+      "54: -2.5886e+06 -2.6402e+06  2e+05  4e-04  1e-15\n",
+      "55: -2.5858e+06 -2.6364e+06  2e+05  3e-04  1e-15\n",
+      "56: -2.5817e+06 -2.6288e+06  2e+05  3e-04  9e-16\n",
+      "57: -2.5796e+06 -2.6247e+06  2e+05  3e-04  9e-16\n",
+      "58: -2.5770e+06 -2.6216e+06  1e+05  3e-04  9e-16\n",
+      "59: -2.5723e+06 -2.6169e+06  1e+05  2e-04  9e-16\n",
+      "60: -2.5693e+06 -2.6130e+06  1e+05  2e-04  9e-16\n",
+      "61: -2.5673e+06 -2.6110e+06  1e+05  2e-04  9e-16\n",
+      "62: -2.5652e+06 -2.6081e+06  1e+05  2e-04  9e-16\n",
+      "63: -2.5604e+06 -2.6017e+06  1e+05  2e-04  8e-16\n",
+      "64: -2.5559e+06 -2.5947e+06  1e+05  1e-04  8e-16\n",
+      "65: -2.5517e+06 -2.5883e+06  1e+05  1e-04  7e-16\n",
+      "66: -2.5489e+06 -2.5836e+06  1e+05  1e-04  7e-16\n",
+      "67: -2.5479e+06 -2.5819e+06  1e+05  1e-04  7e-16\n",
+      "68: -2.5446e+06 -2.5770e+06  1e+05  1e-04  7e-16\n",
+      "69: -2.5406e+06 -2.5705e+06  1e+05  9e-05  7e-16\n",
+      "70: -2.5373e+06 -2.5662e+06  1e+05  8e-05  7e-16\n",
+      "71: -2.5369e+06 -2.5649e+06  1e+05  8e-05  7e-16\n",
+      "72: -2.5345e+06 -2.5561e+06  1e+05  8e-05  7e-16\n",
+      "73: -2.5323e+06 -2.5476e+06  1e+05  7e-05  7e-16\n",
+      "74: -2.5289e+06 -2.5458e+06  1e+05  7e-05  7e-16\n",
+      "75: -2.5241e+06 -2.5365e+06  1e+05  6e-05  7e-16\n",
+      "76: -2.5197e+06 -2.5281e+06  1e+05  6e-05  7e-16\n",
+      "77: -2.5154e+06 -2.5197e+06  1e+05  5e-05  7e-16\n",
+      "78: -2.5096e+06 -2.5091e+06  1e+05  5e-05  7e-16\n",
+      "79: -2.5050e+06 -2.5018e+06  1e+05  5e-05  7e-16\n",
+      "80: -2.5007e+06 -2.4955e+06  1e+05  4e-05  7e-16\n",
+      "81: -2.4984e+06 -2.4921e+06  1e+05  4e-05  7e-16\n",
+      "82: -2.4960e+06 -2.4876e+06  1e+05  4e-05  7e-16\n",
+      "83: -2.4920e+06 -2.4815e+06  1e+05  4e-05  7e-16\n",
+      "84: -2.4899e+06 -2.4784e+06  2e+05  4e-05  7e-16\n",
+      "85: -2.4868e+06 -2.4732e+06  2e+05  4e-05  7e-16\n",
+      "86: -2.4826e+06 -2.4659e+06  2e+05  3e-05  7e-16\n",
+      "87: -2.4754e+06 -2.4533e+06  2e+05  3e-05  7e-16\n",
+      "88: -2.4705e+06 -2.4438e+06  2e+05  3e-05  7e-16\n",
+      "89: -2.4632e+06 -2.4312e+06  2e+05  3e-05  6e-16\n",
+      "90: -2.4630e+06 -2.4300e+06  2e+05  3e-05  7e-16\n",
+      "91: -2.4554e+06 -2.4162e+06  2e+05  2e-05  6e-16\n",
+      "92: -2.4402e+06 -2.3960e+06  2e+05  2e-05  6e-16\n",
+      "93: -2.4373e+06 -2.3913e+06  2e+05  2e-05  6e-16\n",
+      "94: -2.4254e+06 -2.3716e+06  2e+05  2e-05  6e-16\n",
+      "95: -2.4186e+06 -2.3605e+06  2e+05  2e-05  6e-16\n",
+      "96: -2.4183e+06 -2.3605e+06  2e+05  2e-05  6e-16\n",
+      "97: -2.4140e+06 -2.3534e+06  2e+05  2e-05  6e-16\n",
+      "98: -2.4062e+06 -2.3403e+06  2e+05  2e-05  6e-16\n",
+      "99: -2.3994e+06 -2.3325e+06  2e+05  1e-05  6e-16\n",
+      "100: -2.3950e+06 -2.3272e+06  2e+05  1e-05  6e-16\n",
       "Terminated (maximum number of iterations reached).\n",
       "Solution status not optimal: unknown\n",
-      "using time:  973.3764061927795\n",
-      "221732.63962719816\n"
+      "using time:  1581.1055591106415\n",
+      "1759.1513899239992\n"
      ]
     }
    ],
@@ -343,29 +337,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.11850882 -0.07429014 -0.03383018  0.00202295 -0.00737332  0.02974563\n",
-      "   0.14073151 -0.11425928  0.02723813  0.06317792 -0.10447811  0.25543346\n",
-      "  -0.11236641  0.00010973 -0.00068714  0.04396792 -0.10861816  0.72447324\n",
-      "   0.00133004 -0.00319004  0.15235343]\n",
-      " [ 0.08921593 -0.00032336  0.07870554  0.01423591  0.00036857  0.08360401\n",
-      "   0.08777066  0.08919588  0.08493473 -0.00019055  0.09506711  0.09060728\n",
-      "   0.0892062   0.0000012  -0.00001094  0.00014508  0.09794443  0.01056797\n",
-      "   0.00001145 -0.00000227  0.08894517]\n",
-      " [ 0.08921506 -0.00032321  0.078712    0.01422783  0.00036849  0.08360549\n",
-      "   0.08777048  0.08919501  0.08493516 -0.00019102  0.09506785  0.09060547\n",
-      "   0.08920496  0.0000012  -0.00001092  0.00014501  0.09794299  0.01057476\n",
-      "   0.00001142 -0.00000226  0.08894424]]\n",
-      "3313.2507007580944\n",
-      "1.1159941713018335\n",
-      "5075.000000000025\n"
+      "[[ 0.0314606   0.00000184 -0.00000578 -0.0000056  -0.00000404 -0.00000579\n",
+      "  -0.0000058   0.43806026 -0.00000579 -0.00000337 -0.00000581  0.02142753\n",
+      "  -0.0000058  -0.00000023  0.00000076  0.00003852 -0.00000582 -0.00000553\n",
+      "   0.00000853 -0.00000184  0.50906316]\n",
+      " [ 0.03174131  0.00000176 -0.00000578 -0.0000056  -0.00000408 -0.00000579\n",
+      "  -0.0000058   0.44561361 -0.00000579 -0.0000034  -0.00000581  0.02104947\n",
+      "  -0.0000058  -0.00000022  0.00000085  0.00003823 -0.00000582 -0.00000553\n",
+      "   0.00000835 -0.00000173  0.50160759]\n",
+      " [ 0.03228857  0.0000017  -0.00000578 -0.00000562 -0.00000413 -0.00000579\n",
+      "  -0.0000058   0.47293269 -0.00000579 -0.00000344 -0.00000581  0.01962018\n",
+      "  -0.0000058  -0.00000019  0.00000115  0.00003764 -0.00000582 -0.00000554\n",
+      "   0.00000769 -0.00000153  0.47517143]]\n",
+      "-9.020562075079397e-17\n",
+      "0.03083508822633423\n"
      ]
     }
    ],
    "source": [
     "print (res.reshape((-1, len(endmembers)))[:3]) ### should have same zeros as initial input.\n",
-    "print (res.ravel()[grad_zero_indices].sum()) ### should be zero\n",
-    "print (res.ravel()[grad_zero_indices].max()) ### should be zero\n",
-    "print (res.sum())"
+    "print ((col_major(res)[grad_zero_indices]).sum()) ### should be zero\n",
+    "print ((col_major(res)[grad_zero_indices]).max()) ### should be zero"
    ]
   },
   {
@@ -377,8 +369,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9.563453912079597e-25\n",
-      "-0.11717243200493661 1.1159941713018335\n"
+      "2.1453227758057872e-32\n",
+      "-1.0020860305304335e-05 0.9975009192528367\n"
      ]
     }
    ],
@@ -396,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "392102735161.399\n"
+      "252856541.8422539\n"
      ]
     }
    ],
@@ -530,17 +522,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.6/site-packages/ipykernel_launcher.py:8: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  \n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -553,12 +537,19 @@
     "### plot handles corresponding to gt mixing weights, recovered mixing weights, and post-processed mixing weights.\n",
     "###\n",
     "\n",
-    "Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "eps=1e-10\n",
     "\n",
-    "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]\n",
-    "recovered_handle_position=mixing_weights.T.dot(Vertices)/mixing_weights.T.sum(axis=-1)[...,np.newaxis]\n",
-    "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]\n",
-    "postprocessed_handle_position=res.T.dot(Vertices)/res.T.sum(axis=-1)[...,np.newaxis]\n",
+    "# Vertices=vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "## use recovered vertices instead.\n",
+    "recovered_vertices2=recover_vertices(res, vertices1, endmembers).reshape((len(vertices1),-1))\n",
+    "Vertices=recovered_vertices2[:,poses_ind*3:poses_ind*3+3]\n",
+    "\n",
+    "\n",
+    "gt_handle_position=gt_mixing_weights.T.dot(Vertices)/(gt_mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "recovered_handle_position=mixing_weights.T.dot(Vertices)/(mixing_weights.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "cliped_handle_position=mixing_weights_clip.T.dot(Vertices)/(mixing_weights_clip.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
+    "postprocessed_handle_position=res.T.dot(Vertices)/(res.T.sum(axis=-1)[...,np.newaxis]+eps)\n",
     "\n",
     "%matplotlib \n",
     "import matplotlib.pyplot as plt\n",
